Fix unicode arrows in buttons on IE11

--- a/src/styles/_base.css
+++ b/src/styles/_base.css
@@ -7,7 +7,7 @@
 html {
   color: white;
   height: 100%;
-  font-family: 'Montserrat', 'Frutiger', 'Segoe UI', 'Helvetica', Arial, 'Arial Unicode MS', sans-serif;
+  font-family: 'Montserrat', 'Frutiger', 'Segoe UI', 'Helvetica', Arial, sans-serif;
   font-size: 15px;
   line-height: 1.5;
   text-rendering: optimizeLegibility;
