--- a/src/styles/components/fees.module.css
+++ b/src/styles/components/fees.module.css
@@ -157,7 +157,7 @@
   }
 
   .optionWrap {
-    flex: 1 0 25%;
+    flex: 1 1 25%;
     margin-bottom: 0;
     padding: 0 1.5rem;
     transform: scale(.95);
